Fix T49523: very slow normal map tangent computation for rendering in 2.78.